# GaiaAgent

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ADOPTERS.md  ADOPTION_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  Dockerfile  GOVERNANCE.md  LICENSE  LOOP_ROADMAP.md  LOOP_ROADMAP.zh.md  Makefile  PROTOCOL.md  PROTOCOL.zh.md  README.md  README.zh.md  ROADMAP.md  ROADMAP.zh.md  SALES_READINESS.md  SECURITY.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
.VSCodeCounter/2026-06-24_20-00-09/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.agents/plans/: router-delegate-correlation-and-denial.md
.claude/rules/: general.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-reference.md  architecture.md  why-gaiaagent.md
docs/architecture/: bridge-guide.md  overview.md  security-model.md
docs/blog/: why-gaiaagent.md
docs/en/: README.md  (+2 more)
examples/: _real_mcp_server.py  cli_loop_demo.py  e2e_acp_interop.py  e2e_channel_interop.py  e2e_cross_process.py  e2e_mcp_a2a_interop.py
scripts/: check_utf8.py  generate_schema.py
spec/: AURC_SPEC.md  aurc-message.schema.json
tests/: __init__.py  conftest.py  test_acp_bridge.py  test_audit_sink.py  test_authz_audit.py  test_bridge_authz_guard.py  test_bridge_connector.py  test_bridges.py  test_claude_integration.py  test_cli.py  test_cli_init.py  test_cli_serve.py  test_codec.py  test_codex_integration.py  test_conformance.py  test_context_registry.py  test_dashboard.py  test_decorators.py  test_delegation_signing.py  test_demo.py  test_discord_bridge.py  test_e2e_acp_interop.py  test_e2e_channel_interop.py  test_e2e_cross_process.py  test_e2e_mcp_a2a_interop.py  test_http_client.py  test_http_server_drain.py  test_identity.py  test_ingress_limits.py  test_lifecycle.py  test_lifecycle_listeners.py  test_lifecycle_loop.py  test_loop_backend.py  test_mcp_authz.py  test_mcp_server.py  test_messaging.py  test_observability_metrics.py  test_observability_tracing.py  test_otel_exporter.py  test_registry_protocol.py  (+14 more)
(+104 files in other folders)
